--- a/ShapesDemo/AndroidManifest.xml
+++ b/ShapesDemo/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.INTERNET" /><uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     
 
     <application
         android:icon="@drawable/ic_launcher"
+        android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:logo="@drawable/ic_rtilogo" android:debuggable="true">
+        android:theme="@style/AppTheme" android:logo="@drawable/ic_rtilogo">
         <activity
             android:name="com.rti.android.shapesdemo.ShapesDemo"
             android:label="@string/app_name"
